[package]
name = "buildy"
version = "0.12.4"
authors = ["Steve Mostovoy <stevemostovoysm@gmail.com>"]
edition = "2018"

categories = ["command-line-utilities", "concurrency", "development-tools", "development-tools::build-utils", "filesystem"]
documentation = "https://github.com/stovoy/buildy/blob/master/README.md"
description = "An ultra-fast parallel build system for local iteration"
homepage = "https://github.com/stovoy/buildy"
keywords = ["build", "parallel", "incremental", "watch", "tool"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/stovoy/buildy"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = "0.8.14"
crossbeam = "0.8.0"
duct = "0.13.4"
walkdir = "2.3.1"
rust-crypto = "0.2.36"
notify = "4.0.15"
termcolor = "1.1.2"
